@@ -15,7 +15,17 @@ static struct waypoint waypoints[] = {
 	{ 10,	25,	"DOWNDEBS" },   /* downloading packages; run time varies by
 				   bandwidth; high granularity */
 	{ 25,	45,	"EXTRACTPKGS" },/* extracting the core packages */
-	{ 45,	100,	"INSTBASE" },	/* installing the base system
-				   (currently has very bad granularity) */
+
+	/* old debootstrap with poor granularity */
+	{ 45,	100,	"INSTBASE" },	/* installing the base system */
+
+	/* new debootstrap with better granularity */
+	{ 45,	50,	"INSTCORE" },	/* installing packages needed for dpkg to
+					   work */
+	{ 50,	60,	"UNPACKREQ" },	/* unpacking required packages */
+	{ 60,	70,	"CONFREQ" },	/* configuring required packages */
+	{ 70,	85,	"UNPACKBASE" },	/* unpacking the rest of the base system */
+	{ 85,	100,	"CONFBASE" },	/* configuring the rest of the base system */
+
 	{ 100,	0,	NULL },		/* last entry, required */
 };
