@@ -13,6 +13,8 @@ base-installer (1.18) UNRELEASED; urgency=low
     - List both starting and ending percentages for waypoints, in order to
       be able to support multiple paths in the event of changes to
       debootstrap.
+    - Add necessary waypoints and strings to cope with the debootstrap
+      granularity patch (#244563).
   * Joey Hess
     - Call archdetect command instead of using template to get subarch.
 
